Fixed alignments of inputs and placeholders in registration popup, fixed colors in lawyers page headers, change order of menu items

--- a/front/src/components/footer/footer.scss
+++ b/front/src/components/footer/footer.scss
@@ -52,7 +52,7 @@
     color: #f8f9fa;
 
     &:hover {
-      color: #007bff;
+      color: #46a0bd;
       cursor: pointer;
     }
   }
