--- a/front/src/components/header/header.scss
+++ b/front/src/components/header/header.scss
@@ -17,6 +17,10 @@
 }
 
 .nav {
+  .headerItem
+  {
+    pointer-events: none;
+  }
   & ul {
     list-style: none;
     display: flex;
@@ -61,10 +65,6 @@
       & a {
         text-decoration: none;
         color: #393f48;
-
-        &:hover:not(.active) {
-          text-decoration: underline;
-        }
       }
     }
   }
