--- a/front/src/pages/Lawyer/layerprofile.css
+++ b/front/src/pages/Lawyer/layerprofile.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   align-items: center;
   padding-bottom: 20px;
+  padding-top: 20px;
   border-bottom: 1px solid #ddd;
   margin-bottom: 20px;
 }
